--- a/pom.xml
+++ b/pom.xml
@@ -66,6 +66,8 @@
 			<version>2.5</version>
 			<scope>provided</scope>
 		</dependency>
+		
+		
 
 		<dependency>
 			<groupId>org.slf4j</groupId>
@@ -107,11 +109,23 @@
 			 <version>4.2.3.RELEASE</version>
 		</dependency>
 
-		<dependency>
-			<groupId>org.springframework.data</groupId>
-			<artifactId>spring-data-jpa</artifactId>
-			<version>${org.springframework.data.version}</version>
-		</dependency>
+ <dependency>
+     <groupId>org.springframework.boot</groupId>
+     <artifactId>spring-boot-starter-data-jpa</artifactId>
+     <version>1.5.2.RELEASE</version>
+  </dependency>
+  
+<dependency>
+    <groupId>org.springframework.data</groupId>
+    <artifactId>spring-data-jpa</artifactId>
+    <version>1.11.6.RELEASE</version>
+</dependency>
+
+<dependency>
+    <groupId>commons-digester</groupId>
+    <artifactId>commons-digester</artifactId>
+    <version>2.1</version>
+</dependency>
 
 		<dependency>
 			<groupId>org.springframework</groupId>
